--- a/.github/workflows/application-inspector-analysis.yml
+++ b/.github/workflows/application-inspector-analysis.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run Microsoft Application Inspector scanner
-        uses: microsoft/ApplicationInspector-Action@v1
+        uses: microsoft/ApplicationInspector-Action@fe3a2a9f9972977aeca0436ea978fe6f25ad43cb
 
 
       - name: Upload Trivy scan results to GitHub Security tab
